# strantas-quanta

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: integration.yml
alembic/: env.py
alembic/versions/: 20260312_000001_initial_schema.py  20260312_000002_ops_tables.py  20260312_000003_idempotency_keys.py  20260312_000004_tenant_indexes_and_carrier_outputs.py  20260313_000005_ops_tenant_isolation.py  20260321_000006_inbound_mailboxes_and_job_dedupe.py  20260321_000007_replay_audits.py  20260410_000008_id_counters.py
apps/api/quanta_api/: __init__.py  app_state.py  bootstrap.py  dependencies.py  errors.py  main.py  middleware.py  worker_main.py
apps/api/quanta_api/api/: routes.py
apps/api/quanta_api/core/: config.py
apps/api/quanta_api/domain/: contracts.py  enums.py  models.py  repositories.py
apps/api/quanta_api/services/: alerts.py  attachment_intelligence.py  bqm_validator.py  census_extractor.py  connector_execution.py  connector_orchestration.py  email_adapters.py  ocr.py  (+15 more)
apps/api/strantas_quanta.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
docs/: architecture.md  local-verification.md
docs/examples/: bqm-output-example.json  carrier-rfp-example.json
postman/: STRANTAS_QUANTA_v1.postman_collection.json
samples/: acme_census.csv  acme_census.xlsx
scripts/: bootstrap_dev.sh  generate_dental_vision_rfp_pdf.py  generate_sample_pdf.py  generate_sample_xlsx.py  generate_scanned_pdf.py  reset_dev_db.py  run_worker.py
tests/integration/: conftest.py  test_real_backends.py
(+3 files in other folders)
